# multi-model-router

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
.claude/: findings.md
.claude/docs/: architecture.md
.github/workflows/: ci.yml  publish.yml
configs/: budget.yaml  cascade.yaml  default.yaml  multi-provider.yaml  openai.yaml
dashboard/: index.html  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: CostChart.tsx  KPICards.tsx  ModelDistribution.tsx  RequestLog.tsx
decisions/: 2026-04-02-differentiation.md  2026-04-02-monetization-model.md  2026-04-03-cloud-features.md  2026-04-03-monetization-v2.md  2026-04-03-opensource-strategy.md  2026-04-03-positioning.md  2026-04-03-privacy-architecture.md
eval_data/: embedding_examples.yaml  test_set.yaml
research/: index.html
src/mmrouter/: __init__.py  api.py  cli.py  init.py  models.py
src/mmrouter/alerts/: __init__.py  channels.py  rules.py
src/mmrouter/classifier/: __init__.py  embeddings.py  few_shot_examples.py  llm_classifier.py  rules.py
src/mmrouter/dashboard/: app.py
src/mmrouter/eval/: __init__.py  compare.py  evaluate.py  quality.py
src/mmrouter/experiments/: __init__.py  splitter.py  store.py
src/mmrouter/providers/: __init__.py  base.py  cache.py  litellm_provider.py
src/mmrouter/router/: __init__.py  adaptive.py  budget.py  cascade.py  config.py  engine.py  fallback.py
src/mmrouter/server/: __init__.py  app.py  auth.py  models.py
src/mmrouter/tracker/: __init__.py  analytics.py  logger.py
tests/: test_e2e_product.py  test_eval.py  test_eval_compare.py  test_init.py  test_models.py  test_provider.py  test_provider_messages.py
tests/test_alerts/: test_channels.py  test_integration.py  test_rules.py
tests/test_classifier/: test_embeddings.py  test_embeddings_training.py  test_llm_classifier.py  test_rules.py
tests/test_dashboard/: test_app.py  test_feedback_stats.py
tests/test_eval/: test_quality.py
tests/test_experiments/: test_experiment_routing.py  test_splitter.py  test_store.py
tests/test_providers/: test_cache.py  test_litellm_provider.py
tests/test_router/: test_adaptive.py  test_budget.py  test_cascade.py  test_config.py  test_engine.py  test_engine_adaptive.py  test_engine_messages.py  test_fallback.py
tests/test_server/: test_app.py  test_auth.py  test_feedback_endpoint.py
tests/test_tracker/: test_analytics.py  test_feedback.py  test_logger.py
