[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmrouter"
version = "0.1.0"
description = "Intelligent LLM request routing: classify prompts, route to optimal model, cut costs 40-70%"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Evgeny Alexeev" },
]
dependencies = [
    "click>=8.1",
    "litellm>=1.55,<1.82.7",
    "pydantic>=2.0",
    "strictyaml>=1.7",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["llm", "routing", "cost-optimization", "ai", "multi-model", "classifier"]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2",
]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sse-starlette>=1.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/alexe-ev/multi-model-router"
Documentation = "https://github.com/alexe-ev/multi-model-router#readme"
Issues = "https://github.com/alexe-ev/multi-model-router/issues"

[project.scripts]
mmrouter = "mmrouter.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mmrouter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
